--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/InteligenceBoxVol4.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@700&display=swap" rel="stylesheet">
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GreyBoxAI</title>
+    <title>ResearchScope</title>
   </head>
   <body>
     <div id="root"></div>
